--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
+
 <body>
     <!-- CONTACT PAGE -->
-    <!-- TODO: Navbar here -->
-    <!-- TODO: Banner Image here-->
+    <!-- Navbar here -->
+    <header>
+        <p id="announcement"> We will be closed on December 25th to celebrate Christmas.</p>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="menu.html">Menu</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <!-- Banner Image here-->
+        <img id="banner" src="/assets/images/banner.png" alt="Thai Restaurant Banner">
+    </header>
+
     <main>
         <h2>Hours of Operation</h2>
         <p>
@@ -20,8 +45,13 @@
         </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number:</strong> TBD
+            <i class="fa fa-phone" aria-hidden="true"></i> 757-895-6767
+            <br>
+            <i class="fa fa-address-card" aria-hidden="true"></i> 123 Fall Court<br>Chesapeake, VA 23322
+            <br>
+            <i class="fa fa-envelope" aria-hidden="true"></i> htmlthai@gmail.com
         </p>
     </main>
 </body>
+
 </html>
