--- a/index.html
+++ b/index.html
@@ -1,18 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>H-Thai-ML</title>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
+
 <body>
     <!-- HOME PAGE -->
-    <!-- TODO: Navbar here -->
-    <!-- TODO: Banner Image here-->
+    <!-- Navbar here -->
+    <header>
+        <p id="announcement"> We will be closed on December 25th to celebrate Christmas.</p>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="menu.html">Menu</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <!-- Banner Image here-->
+        <img id="banner" src="/assets/images/banner.png" alt="Thai Restaurant Banner">
+    </header>
+
     <main>
         <h1>H-Thai-ML</h1>
-        <!-- TODO: Home page code here-->
+        <h2>Developing incredible flavors since 1990</h2>
+
+        <div class="service">
+            <h3>Dine In</h3>
+        </div>
+        <div class="service">
+            <h3>Take Out</h3>
+        </div>
+        <div class="service">
+            <h3>Devliery</h3>
+        </div>
+
+        <img src="assets/images/table-in-restaurant.jpg" alt="Restaurant Tables">
+
     </main>
+
 </body>
+
 </html>
