--- a/about.html
+++ b/about.html
@@ -1,17 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
+
 <body>
     <!-- ABOUT PAGE -->
-    <!-- TODO: Navbar here -->
-    <!-- TODO: Banner Image here-->
+    <!-- Navbar here -->
+    <header>
+        <p id="announcement"> We will be closed on December 25th to celebrate Christmas.</p>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="menu.html">Menu</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <!-- Banner Image here-->
+        <img id="banner" src="/assets/images/banner.png" alt="Thai Restaurant Banner">
+    </header>
+
     <main>
         <!-- About page code here -->
+        <h1>About Us</h1>
+        <!-- Location Section-->
+        <section>
+            <h2>Locations</h2>
+            <ul class="locations">
+                <li>Chesapeake, VA</li>
+                <li>Virginia Beach, VA</li>
+                <li>Los Angeles, CA</li>
+                <li>San Diego, CA</li>
+            </ul>
+        </section>
+        <!-- Origin Story Section-->
+        <section>
+            <h2>Origin Story</h2>
+            <img src="/assets/images/about.jpg" alt="Picture of Spices">
+            <p>The Chesapeake location is our flagship. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </section>
     </main>
 </body>
+
 </html>
